// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dynamic-import.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import("./foo.json", { assert: { type: "json" } });

=====================================output=====================================
import("./foo.json", {assert: {type: "json"}});

================================================================================
`;

exports[`empty.js - {"bracketSpacing":false} [acorn] format 1`] = `
"Unexpected token (1:33)
> 1 | export * as bar from "bar.json" assert { }
    |                                 ^
Cause: Unexpected token (1:32)"
`;

exports[`empty.js - {"bracketSpacing":false} [espree] format 1`] = `
"Unexpected token assert (1:33)
> 1 | export * as bar from "bar.json" assert { }
    |                                 ^
Cause: Unexpected token assert"
`;

exports[`empty.js - {"bracketSpacing":false} [meriyah] format 1`] = `
"Unexpected token: 'identifier' (1:33)
> 1 | export * as bar from "bar.json" assert { }
    |                                 ^^^^^^
Cause: [1:32-1:38]: Unexpected token: 'identifier'"
`;

exports[`empty.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export * as bar from "bar.json" assert { }
=====================================output=====================================
export * as bar from "bar.json" assert {};

================================================================================
`;

exports[`re-export.js - {"bracketSpacing":false} [acorn] format 1`] = `
"Unexpected token (1:44)
> 1 | export { default as foo2 } from "foo.json" assert { type: "json" };
    |                                            ^
  2 |
Cause: Unexpected token (1:43)"
`;

exports[`re-export.js - {"bracketSpacing":false} [espree] format 1`] = `
"Unexpected token assert (1:44)
> 1 | export { default as foo2 } from "foo.json" assert { type: "json" };
    |                                            ^
  2 |
Cause: Unexpected token assert"
`;

exports[`re-export.js - {"bracketSpacing":false} [meriyah] format 1`] = `
"Unexpected token: 'identifier' (1:44)
> 1 | export { default as foo2 } from "foo.json" assert { type: "json" };
    |                                            ^^^^^^
  2 |
Cause: [1:43-1:49]: Unexpected token: 'identifier'"
`;

exports[`re-export.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export { default as foo2 } from "foo.json" assert { type: "json" };

=====================================output=====================================
export {default as foo2} from "foo.json" assert {type: "json"};

================================================================================
`;

exports[`static-import.js - {"bracketSpacing":false} [acorn] format 1`] = `
"Unexpected token (1:31)
> 1 | import json from "./foo.json" assert { type: "json" };
    |                               ^
  2 |
Cause: Unexpected token (1:30)"
`;

exports[`static-import.js - {"bracketSpacing":false} [espree] format 1`] = `
"Unexpected token assert (1:31)
> 1 | import json from "./foo.json" assert { type: "json" };
    |                               ^
  2 |
Cause: Unexpected token assert"
`;

exports[`static-import.js - {"bracketSpacing":false} [meriyah] format 1`] = `
"Unexpected token: 'identifier' (1:31)
> 1 | import json from "./foo.json" assert { type: "json" };
    |                               ^^^^^^
  2 |
Cause: [1:30-1:36]: Unexpected token: 'identifier'"
`;

exports[`static-import.js - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import json from "./foo.json" assert { type: "json" };

=====================================output=====================================
import json from "./foo.json" assert {type: "json"};

================================================================================
`;
